--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 ## 数据源配置
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/los?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://192.168.1.7:3306/los?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=!QAZ2wsx
+spring.datasource.password=Danyan!23
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+#JPA
+
+#实体类的Cloumn的时候驼峰自动转为下划线
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl 
 ## 是否显示 SQL 语句
 spring.jpa.show-sql=true
 
