--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<!-- thymeleaf模板 -->
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+		
 		<!-- json  -->
 		<dependency>
 		    <groupId>com.alibaba</groupId>
