--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # 多环境（dev、test、prod）配置
-spring.profiles.active=test
+spring.profiles.active=dev
 
 #JPA
 #实体类的Cloumn的时候驼峰自动转为下划线
@@ -16,3 +16,10 @@ spring.data.web.pageable.page-parameter=pageNumber
 spring.data.web.pageable.size-parameter=pageSize
 ## 字段排序参数名 默认为 sort
 spring.data.web.sort.sort-parameter=orderBy
+
+#ftp config
+ftp.enabled=true
+ftp.host=192.168.1.7
+ftp.port=21
+ftp.username=root
+ftp.password=SHdanyan-Server
