--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,15 @@ ftp.host=192.168.1.7
 ftp.port=21
 ftp.username=root
 ftp.password=SHdanyan-Server
+
+los.test="test"
+# 32位随机字符串
+rand.str = ${random.value}
+# 随机int类型
+rand.intid = ${random.int}
+# 随机long类型
+rand.longid = ${random.long}
+# 100以内的随机int类型
+rand.number = ${random.int(100)}
+# 0-100范围内的随机int类型
+rand.range = ${random.int[0,100]}
